small layout change to fix overlapping time columns

--- a/src/style.css
+++ b/src/style.css
@@ -182,6 +182,7 @@ input[type="number"] {
 .calendar-grid {
   display: grid;
   grid-template-columns: repeat(var(--column-count), minmax(170px, 1fr));
+  min-width: max-content;
   gap: 10px;
 }
 
